--- a/.github/workflows/PreProd-actions-validation.yml
+++ b/.github/workflows/PreProd-actions-validation.yml
@@ -1,4 +1,4 @@
-name: UAT actions validation
+name: PreProd actions validation
 on:
   pull_request:
     types:
@@ -6,7 +6,7 @@ on:
       - synchronize
       - reopened
     branches:
-      - UAT
+      - PREPROD
 
 jobs:
   run_tests:
@@ -36,8 +36,8 @@ jobs:
     - name: 'Populate auth file with SFDX_URL secret of integration org'
       shell: bash
       run: |
-        echo ${{secrets.SALESFORCE_AUTH_UAT_URL}} | sed 's/./& /g'
-        echo ${{secrets.SALESFORCE_AUTH_UAT_URL}} > ./SALESFORCE_AUTH_UAT_URL.txt
+        echo ${{secrets.SALESFORCE_AUTH_PREPROD_URL}} | sed 's/./& /g'
+        echo ${{secrets.SALESFORCE_AUTH_PREPROD_URL}} > ./SALESFORCE_AUTH_UAT_URL.txt
 
     # Authenticate to org using the URL stored in the text file
     - name: 'Authenticate to Integration Org'
