--- a/.github/workflows/PreProd-actions.yml
+++ b/.github/workflows/PreProd-actions.yml
@@ -1,10 +1,10 @@
-name: UAT actions
+name: PreProd actions
 on:
   pull_request:
     types:
       - closed
     branches:
-      - UAT
+      - PREPROD
 
 jobs:
   run_tests:
@@ -34,8 +34,8 @@ jobs:
     - name: 'Populate auth file with SFDX_URL secret of integration org'
       shell: bash
       run: |
-        echo ${{secrets.SALESFORCE_AUTH_UAT_URL}} | sed 's/./& /g'
-        echo ${{secrets.SALESFORCE_AUTH_UAT_URL}} > ./SALESFORCE_AUTH_UAT_URL.txt
+        echo ${{secrets.SALESFORCE_AUTH_PREPROD_URL}} | sed 's/./& /g'
+        echo ${{secrets.SALESFORCE_AUTH_PREPROD_URL}} > ./SALESFORCE_AUTH_UAT_URL.txt
 
     # Authenticate to org using the URL stored in the text file
     - name: 'Authenticate to Integration Org'
